@@ -2,7 +2,7 @@
 
    GNU Chess frontend
 
-   Copyright (C) 2001-2011 Free Software Foundation, Inc.
+   Copyright (C) 2001-2013 Free Software Foundation, Inc.
 
    GNU Chess is based on the two research programs 
    Cobalt by Chua Kong-Sian and Gazebo by Stuart Cracraft.
@@ -580,7 +580,7 @@ void cmd_undo(void)
 {
   SetDataToEngine( "force\nundo" );
   ChangeColor( true );
-  SetAutoGo( true );
+  SetAutoGo( !(flags & MANUAL) );
   if (GameCnt >= 0)
     UnmakeMove (board.side, &Game[GameCnt].move);
   else
